--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,15 +23,19 @@ body {
 }
 
 .left a {
-  color: #333; /* Set link color to dark blue */
+  display: inline-block;
+  color: #333;
   text-decoration: none;
   margin-right: 20px;
+  padding: 10px 20px;
+  border-radius: 5px;
   transition: color 0.3s, background-color 0.3s;
 }
 
 .left a:hover {
-  color: #87ceeb; /* Change link color on hover to light blue */
-  background-color: #fff; /* Change background color on hover to white */
+  color: #ffffff;
+  background-color: #25aae1;
+  border-color: #25aae1;
 }
 
 .right {
@@ -96,7 +100,7 @@ body {
 }
 
 .product-card button {
-  background-color: #ffd700;
+  background-color: #25aae1;
   color: #333;
   padding: 8px 16px;
   border: none;
@@ -105,13 +109,8 @@ body {
   transition: background-color 0.3s;
 }
 
-.product-card button:hover {
-  background-color: #ffc107; /* Darker yellow on hover */
-}
-
-/* Add these styles to your global.css file or equivalent */
 .testimonial-container {
-  width: 60%;
+  width: 70%;
   margin: 0 auto;
   border: 1px solid #ccc;
   overflow: hidden;
